# clinical-nlp-span-extraction

./: .gitignore  FINAL_SUBMISSION_CHECKLIST.md  README.md  RESULTS_PRESENTATION.txt  baseline_nbme.py  ensemble_nbme.py  evaluate.py  final_results.py  improve_baseline.py  llm_nbme_compare.py  predict.py  prepare_nbme_data.py  pyproject.toml  requirements.txt  results_and_editing.ipynb  train.py  train_nbme.py  train_nbme_bilstm.py  train_nbme_crf.py  train_nbme_linear.py
artifacts/: course-readiness.md  report-template.md  results-summary.md
data/sample/: train.jsonl  valid.jsonl
src/clinical_nlp_span_extraction/: __init__.py  config.py  data.py  metrics.py  nbme.py  nbme_baseline.py  nbme_bilstm.py  nbme_crf.py  nbme_linear.py  nbme_llm.py  nbme_metrics.py  nbme_training.py  training.py
tests/: conftest.py  test_evaluate.py  test_metrics.py  test_nbme.py
