[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-nlp-span-extraction"
version = "0.1.0"
description = "Clinical NLP span extraction workflows for NBME-style patient note evidence tagging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=3.0.0",
  "numpy>=1.26.0",
  "openai>=1.30.0",
  "pytest>=8.0.0",
  "scikit-learn>=1.5.0",
  "torch>=2.3.0",
  "tqdm>=4.66.0",
  "transformers>=4.45.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
